Popup disappearing on touch release
Affected version
Arch Linux x86_64 (6.11.3-arch1-1)
Gnome version: 47
Mutter version: 47.0-4
Wayland only
Bug summary
On Wayland opening a popup by touch results in it disappearing as soon as the touch release event happens thus making all popups completely unusable for touchscreens.
Steps to reproduce
- Open nautilus
- Long-press on a file to open popup context menu
- Release touch
What happened
The popup closed by releasing the touch.
What did you expect to happen
The popup staying open to selecting an item.
Edited by Demoodite Jafari